Fixed PADL Creator JavaFile (JavaC) Parser
PADL Creator JavaFile (JavaC) Parser now compiles both with Eclipse and
with Maven

All creator-related tests pass. More other tests pass.