@@ -21,25 +21,52 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+					<source>22</source>
+					<target>22</target>
 					<compilerArgs>
-						<arg>-Xlint:deprecation</arg>
-						<arg>-Xlint:preview</arg>
-						<arg>-Xlint:unchecked</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.source.tree=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.source.util=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
 						<arg>
-							--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>
+						--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.source.util=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+					</argLine>
+					<!-- 
+					<excludes>
+						<excludes>TestJCT.java</excludes>
+					</excludes>
+					-->
 				</configuration>
 			</plugin>
 		</plugins>
